monticore-generator/src/test/resources/cocos/invalid/A4047/A4047b.mc4
package cocos.invalid.A4047;

grammar A4047b {
  
  interface A = C;
  
  abstract B implements A;
  
  C;
}
